--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nuxtredirect",
   "version": "1.0.0",
+  "author": "dataxdev",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -9,8 +10,28 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "core-js": "^3.8.2",
-    "nuxt": "^2.14.12"
+    "@nuxtjs/axios": "^5.12.5",
+    "@nuxtjs/pwa": "^3.3.4",
+    "@nuxtjs/sitemap": "^2.4.0",
+    "axios": "^0.21.1",
+    "consola": "^2.15.0",
+    "cross-env": "^5.2.0",
+    "node-sass": "^4.13.1",
+    "nuxt": "^2.14.12",
+    "prismic-javascript": "^3.0.2",
+    "sass-loader": "^8.0.2",
+    "swiper": "^5.3.8",
+    "vee-validate": "^3.4.0",
+    "vue": "^2.0.0",
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-clickaway": "^2.2.2",
+    "vuex": "^3.1.2",
+    "webpack": "^4.36.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/prismic": "^1.2.4",
+    "nodemon": "^1.18.9"
+  }
 }
